...
                                    <barButtonItem tag="1" title="Name" id="n2l-wP-j7K">
                                        <color key="tintColor" red="0.015686274510000001" green="0.87058823529999996" blue="0.4431372549" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <connections>
                                            <action selector="sortLocationsBySelectedOptionItem:" destination="BYZ-38-t0r" id="ZVT-9S-cqt"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem tag="2" title="Arrival Time" id="PWD-9T-s9p">
                                        <connections>
                                            <action selector="sortLocationsBySelectedOptionItem:" destination="BYZ-38-t0r" id="mYa-Wm-dXa"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem tag="3" title="Distance" id="DaR-hm-jVc">
                                        <connections>
                                            <action selector="sortLocationsBySelectedOptionItem:" destination="BYZ-38-t0r" id="UuS-f2-YPW"/>
                                        </connections>
                                    </barButtonItem>
                                </items>
                            </toolbar>
                        </subviews>
                        <animations/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" title="Locations" id="gqn-5w-GUt"/>
                    <connections>
                        <outlet property="defaultSelectedBarButton" destination="n2l-wP-j7K" id="Ui0-x9-5c0"/>
                        <outlet property="locationsTableView" destination="6oF-j2-EYP" id="GMR-Hp-4Ss"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
...
